Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/validos/test4.symbol
SCOPE: global
Symbol(name='num', type='NUMBER_VALUE', value='Unkown')

