Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_sintaxis/test2.symbol
SCOPE: global
Symbol(name='a', type='NUMBER_VALUE', value=2)

